src/pseu/parser/PseuParser.java
/* Generated By:JavaCC: Do not edit this line. PseuParser.java */
package pseu.parser;

import pseu.common.SourceCoords ;
import pseu.common.Assert ;


public class PseuParser implements PseuParserConstants {
        private ASTBuilderI builder ;
        private String fileName = "unknown.pseu" ;

        public void setBuilder( ASTBuilderI builder ) {
                this.builder = builder ;
        }

        public void setFileName( String fileName ) {
                this.fileName = fileName ;
        }

        private SourceCoords currentCoords() {
                return makeCoords( getToken(1) ) ;
        }

        private SourceCoords prevCoords() {
                return makeCoords( getToken(0) ) ;
        }

        private SourceCoords makeCoords( Token tok ) {
                return new SourceCoords(
                        fileName,
                        tok.beginLine,
                        tok.beginColumn,
                        fileName,
                        tok.endLine,
                        tok.endColumn) ;
        }

        private boolean stayInTheLoop( int p ) {
                String op = getToken(1).image ;
                return precedence( op ) >= p ; }

        private class Pair {
                String name ;
                int precedence ;
                Pair( String str, int prec ) {
                name = str ; precedence = prec ; }
        }

        private Pair[] precedenceTable = {
                new Pair( "implies", 100 ),
                new Pair( "==>", 100 ),
                new Pair( "or",      200 ),
                new Pair( "and",     300 ),
                new Pair( "=",       400 ),
                new Pair( "!=",       400 ),
                new Pair( "/=",       400 ),
                new Pair( ">_",      400 ),
                new Pair( "_<",      400 ),
                new Pair( "<=",      400 ),
                new Pair( ">=",      400 ),
                new Pair( ">",       400 ),
                new Pair( "<",       400 ),
                new Pair( "\u005c\u005cle",    400 ),
                new Pair( "\u005c\u005cge",    400 ),
                new Pair( "union",   500 ),
                new Pair( "\u005c\u005ccup",   500 ),
                new Pair( "+",       500 ),
                new Pair( "-",       500 ),
                new Pair( "*",       600 ),
                new Pair( "/",       600 ),
                new Pair( "div",     600 ),
                new Pair( "mod",     600 ),
                new Pair( "intersection", 600 ),
                new Pair( "\u005c\u005ccap",   600 ),
                new Pair( "^",       700 ) } ;

        private int precedence( String name ) {
                for( Pair p : precedenceTable ) {
                        if( name.equals( p.name )  ) return p.precedence ; }
                return 1000000 ;
        }

  final public void File() throws ParseException {
    Block(false);
    jj_consume_token(0);
  }

/* endWithUnit says that an extra "();" should be inserted at
* the end of the block.
*/
  final public void Block(boolean endWithUnit) throws ParseException {
        int count ;
        SourceCoords start = currentCoords() ;
        SourceCoords end ;
         builder.startBlock() ;
    count = MoreBlock(0);
     end = prevCoords() ;
     if( endWithUnit ) {
        builder.mkTuple( 0, end) ;
        builder.mkExpressionCommand() ;
        ++count ; }
         builder.endBlock( count, start.combine(end) ) ;
  }

  final public int MoreBlock(int count) throws ParseException {
    if (jj_2_1(2147483647)) {
      UndeliminatedDeclaration();
                                count++;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        count = MoreBlock(count);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
     {if (true) return count;}
    } else if (jj_2_2(2147483647)) {
      DeliminatedDeclaration();
                              count++;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      count = MoreBlock(count);
     {if (true) return count;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case DIV:
      case FALSE:
      case FUN:
      case IMPLIES:
      case INTERSECTION:
      case MOD:
      case NOT:
      case OR:
      case PROC:
      case RETURN:
      case TRUE:
      case UNION:
      case STAR:
      case LPAR:
      case LBRACK:
      case LBRACE:
      case INT_LITERAL:
      case STRING_LITERAL:
      case LATEX_OP:
      case OTHER_OP:
      case ID:
        UndelimitedCommand();
                              count++;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          count = MoreBlock(count);
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
         {if (true) return count;}
        break;
      case BEGIN:
      case FOR:
      case IF:
      case WHILE:
        DelimitedCommand();
                            count++;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        count = MoreBlock(count);
         {if (true) return count;}
        break;
      default:
        jj_la1[4] = jj_gen;
     {if (true) return count;}
      }
    }
    throw new Error("Missing return statement in function");
  }

  /////////////////////////
 //  Declarations       //
/////////////////////////
  final public void UndeliminatedDeclaration() throws ParseException {
    SourceCoords start = currentCoords() ;
    boolean isInitialized  = false ;
    boolean isTyped = false ;
    int count ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      jj_consume_token(VAR);
      Variable();
      jj_consume_token(COLON);
      Type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        jj_consume_token(52);
        Exp();
                      isInitialized = true ;
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
         builder.varDeclaration( isInitialized, start.combine(prevCoords()) );
      break;
    case VAL:
      jj_consume_token(VAL);
      Variable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        Type();
                            isTyped = true ;
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(52);
      Exp();
         builder.valDeclaration( isTyped, start.combine(prevCoords()) );
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DeliminatedDeclaration() throws ParseException {
    SourceCoords start = currentCoords() ;
    boolean isInitialized  = false ;
    boolean isTyped = false ;
    int count ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUN:
      jj_consume_token(FUN);
      Variable();
      jj_consume_token(LPAR);
      count = Params();
      jj_consume_token(RPAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLON:
        jj_consume_token(COLON);
        Type();
                     isTyped=true;
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(DO);
      Block(false);
      jj_consume_token(END);
      jj_consume_token(FUN);
         builder.mkFunctionExp( count, isTyped, start.combine(prevCoords())) ;
         builder.valDeclaration( false, start.combine(prevCoords()) );
      break;
    case PROC:
      jj_consume_token(PROC);
      Variable();
      jj_consume_token(LPAR);
      count = Params();
      jj_consume_token(RPAR);
         builder.mkIdentifierType( "Unit", start ) ;
      jj_consume_token(DO);
      Block(true);
      jj_consume_token(END);
      jj_consume_token(PROC);
         builder.mkFunctionExp( count, true, start.combine(prevCoords())) ;
         builder.valDeclaration( false, start.combine(prevCoords()) );
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  /////////////////////
 //  Commands       //
/////////////////////
  final public void DelimitedCommand() throws ParseException {
    SourceCoords start = currentCoords() ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      IfCommand(start);
      break;
    case WHILE:
      WhileCommand(start);
      break;
    case FOR:
      ForCommand(start);
      break;
    case BEGIN:
      BeginCommand();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void UndelimitedCommand() throws ParseException {
    SourceCoords start = currentCoords() ;
    if (jj_2_3(2147483647)) {
      AssignmentCommand(start);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case DIV:
      case FALSE:
      case FUN:
      case IMPLIES:
      case INTERSECTION:
      case MOD:
      case NOT:
      case OR:
      case PROC:
      case TRUE:
      case UNION:
      case STAR:
      case LPAR:
      case LBRACK:
      case LBRACE:
      case INT_LITERAL:
      case STRING_LITERAL:
      case LATEX_OP:
      case OTHER_OP:
      case ID:
        ExpCommand(start);
        break;
      case RETURN:
        ReturnCommand(start);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void AssignmentCommand(SourceCoords start) throws ParseException {
        SourceCoords end ;
        int count ;
    count = LHSs(start);
    jj_consume_token(52);
    Exps();
         end = prevCoords() ;
         builder.mkAssignment( count, start.combine(end) ) ;
  }

  final public int LHSs(SourceCoords start) throws ParseException {
    int count = 1 ;
    Variable();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMMA);
      Variable();
                                    ++count;
    }
         {if (true) return count ;}
    throw new Error("Missing return statement in function");
  }

  final public void IfCommand(SourceCoords start) throws ParseException {
    jj_consume_token(IF);
    Exp();
    jj_consume_token(THEN);
    Block(false);
    jj_consume_token(ELSE);
    Block(false);
    jj_consume_token(END);
    jj_consume_token(IF);
         builder.mkIf( start.combine(prevCoords()) ) ;
  }

  final public void WhileCommand(SourceCoords start) throws ParseException {
    jj_consume_token(WHILE);
    Exp();
    jj_consume_token(DO);
    Block(false);
    jj_consume_token(END);
    jj_consume_token(WHILE);
         builder.mkWhile( start.combine(prevCoords()) ) ;
  }

  final public void ForCommand(SourceCoords start) throws ParseException {
    jj_consume_token(FOR);
    Variable();
    jj_consume_token(LEFT_ARROW);
    Exp();
    jj_consume_token(DO);
    Block(false);
    jj_consume_token(END);
    jj_consume_token(FOR);
         builder.mkFor( start.combine(prevCoords()) ) ;
  }

  final public void ReturnCommand(SourceCoords start) throws ParseException {
    jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
    case DIV:
    case FALSE:
    case FUN:
    case IMPLIES:
    case INTERSECTION:
    case MOD:
    case NOT:
    case OR:
    case PROC:
    case TRUE:
    case UNION:
    case STAR:
    case LPAR:
    case LBRACK:
    case LBRACE:
    case INT_LITERAL:
    case STRING_LITERAL:
    case LATEX_OP:
    case OTHER_OP:
    case ID:
      Exp();
      break;
    default:
      jj_la1[13] = jj_gen;
        builder.mkTuple( 0, start ) ;
    }
         builder.mkReturn( start.combine(prevCoords()) ) ;
  }

  final public void BeginCommand() throws ParseException {
    jj_consume_token(BEGIN);
    Block(false);
    jj_consume_token(END);
  }

  final public void ExpCommand(SourceCoords start) throws ParseException {
    Exp();
         builder.mkExpressionCommand( ) ;
  }

  /////////////////////
 //  Expressions    //
/////////////////////
  final public void Exp() throws ParseException {
    Expression(0);
  }

  final public void Expression(int precedence) throws ParseException {
        SourceCoords opCoords ;
        String str ;
    Primary();
    label_2:
    while (true) {
      if (jj_2_4(2147483647) && (stayInTheLoop( precedence ))) {
        ;
      } else {
        break label_2;
      }
      str = Op();
                  opCoords = prevCoords() ;
                 builder.mkLookup( "binary(" +str+ ")", opCoords) ;
      Expression(1+precedence( str ));
                 builder.mkApplication(opCoords) ;
    }
  }

  final public void Primary() throws ParseException {
        SourceCoords start = currentCoords() ;
        String str ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
    case DIV:
    case IMPLIES:
    case INTERSECTION:
    case MOD:
    case NOT:
    case OR:
    case UNION:
    case STAR:
    case LATEX_OP:
    case OTHER_OP:
      str = Op();
      Primary();
         builder.mkLookup( "unary(" +str+ ")", start) ;
         builder.mkTuple( 0, start) ;
         builder.mkApplication( start) ;
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_5(2147483647)) {
        AbbreviatedFunctionExp();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FALSE:
        case FUN:
        case PROC:
        case TRUE:
        case LPAR:
        case LBRACK:
        case LBRACE:
        case INT_LITERAL:
        case STRING_LITERAL:
        case ID:
          SimpleExp();
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case FALSE:
            case FUN:
            case PROC:
            case TRUE:
            case DOT:
            case LPAR:
            case LBRACK:
            case LBRACE:
            case INT_LITERAL:
            case STRING_LITERAL:
            case ID:
              ;
              break;
            default:
              jj_la1[14] = jj_gen;
              break label_3;
            }
            PostfixOp(start);
          }
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void PostfixOp(SourceCoords start) throws ParseException {
        String name ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
      jj_consume_token(DOT);
      name = Name();
         builder.mkLookup( name, start.combine(prevCoords())) ;
      break;
    case FALSE:
    case FUN:
    case PROC:
    case TRUE:
    case LPAR:
    case LBRACK:
    case LBRACE:
    case INT_LITERAL:
    case STRING_LITERAL:
    case ID:
      Arg();
         builder.mkApplication( start.combine(prevCoords())) ;
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SimpleExp() throws ParseException {
    SourceCoords start = currentCoords() ;
    Token tok ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
      jj_consume_token(TRUE);
         builder.mkTrue( start ) ;
      break;
    case FALSE:
      jj_consume_token(FALSE);
         builder.mkFalse( start ) ;
      break;
    case STRING_LITERAL:
      tok = jj_consume_token(STRING_LITERAL);
          builder.mkStringConstant(
                        ParserHelper.unescapeString( tok.image ),
                start ) ;
      break;
    case INT_LITERAL:
      tok = jj_consume_token(INT_LITERAL);
          builder.mkIntConstant(
                        ParserHelper.cleanUpInt( tok.image ),
                start ) ;
      break;
    case ID:
      Variable();
         builder.mkFetch() ;
      break;
    case LBRACE:
      FiniteSetExp();
      break;
    case LBRACK:
      FiniteSequenceExp();
      break;
    case FUN:
    case PROC:
      FunctionExp();
      break;
    case LPAR:
      ParenthizedExp();
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void FiniteSetExp() throws ParseException {
    SourceCoords start = currentCoords() ;
        int count = 0 ;
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
    case DIV:
    case FALSE:
    case FUN:
    case IMPLIES:
    case INTERSECTION:
    case MOD:
    case NOT:
    case OR:
    case PROC:
    case TRUE:
    case UNION:
    case STAR:
    case LPAR:
    case LBRACK:
    case LBRACE:
    case INT_LITERAL:
    case STRING_LITERAL:
    case LATEX_OP:
    case OTHER_OP:
    case ID:
      Exp();
                               ++count ;
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        Exp();
                                   ++count ;
      }
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
         builder.mkSet(count,  start.combine(prevCoords())) ;
  }
